cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp two_sum.cpp two_sum.h testInterface.h add_two_number.cpp add_two_number.h remove_duplicates_from_sorted_array.cpp remove_duplicates_from_sorted_array.h merge_intervals.cpp merge_intervals.h spiral_matrix_ii.cpp spiral_matrix_ii.h unique_paths.cpp unique_paths.h unique_paths_ii.cpp unique_paths_ii.h minimum_path_sum.cpp minimum_path_sum.h)