cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp two_sum.cpp two_sum.h testInterface.h add_two_number.cpp add_two_number.h remove_duplicates_from_sorted_array.cpp remove_duplicates_from_sorted_array.h merge_intervals.cpp merge_intervals.h spiral_matrix_ii.cpp spiral_matrix_ii.h unique_paths.cpp unique_paths.h unique_paths_ii.cpp unique_paths_ii.h minimum_path_sum.cpp minimum_path_sum.h plus_one.cpp plus_one.h set_matrix_zeroes.cpp set_matrix_zeroes.h search_a_2d_matrix.cpp search_a_2d_matrix.h minimum_increment_to_make_array_unique.cpp minimum_increment_to_make_array_unique.h the_masseuse_lcci.cpp the_masseuse_lcci.h surface_area_of_3d_shapes.cpp surface_area_of_3d_shapes.h x_of_a_kind_in_a_deck_of_cards.cpp x_of_a_kind_in_a_deck_of_cards.h subsets.cpp subsets.h)